--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,23 @@
 			<version>2.0.8-beta</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-kernel</artifactId>
+			<version>2.2.1</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-io</artifactId>
+			<version>2.2.1</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
